--- a/portfolio.html
+++ b/portfolio.html
@@ -27,6 +27,7 @@
           <li><a href="https://www.khanacademy.org/computer-programming/skylers-sick-spectacular-satisfying-superb-superior-word-game/5549275200929792">Word Game: A project made with jQuery to unscramble a word</a></li>
           <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-interactive-slideshow/4788021024833536">Interactive Slideshow: An incredibly spectacular slideshow featuring many beautiful climates</a></li>
           <li><a href="asd-projects/data-shapes/">Data Shapes: A multi colored and multi shaped bouncing arena of fun</a></li>
+          <li><a href="asd-projects/debugging-exercise/">Debugging Exercise: A box of blue balls infinitely bouncing around</a></li>
         </ul>
     </div>
 </main>
