add portfolio.html file

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,6 +28,7 @@
           <li><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-interactive-slideshow/4788021024833536">Interactive Slideshow: An incredibly spectacular slideshow featuring many beautiful climates</a></li>
           <li><a href="asd-projects/data-shapes/">Data Shapes: A multi colored and multi shaped bouncing arena of fun</a></li>
           <li><a href="asd-projects/debugging-exercise/">Debugging Exercise: A box of blue balls infinitely bouncing around</a></li>
+          <li><a href="asd-projects/snake/">Snake Game: The iconic slithery snake game brought to you by Skyler ;)</a></li>
         </ul>
     </div>
 </main>
