--- a/portfolio.html
+++ b/portfolio.html
@@ -29,6 +29,7 @@
           <li><a href="asd-projects/data-shapes/">Data Shapes: A multi colored and multi shaped bouncing arena of fun</a></li>
           <li><a href="asd-projects/debugging-exercise/">Debugging Exercise: A box of blue balls infinitely bouncing around</a></li>
           <li><a href="asd-projects/snake/">Snake Game: The iconic slithery snake game brought to you by Skyler ;)</a></li>
+          <li><a href="asd-projects/walker/">Walker: The ultimate 2 player box fighting video game experience</a></li>
         </ul>
     </div>
 </main>
