--- a/asd-projects/walker/index.html
+++ b/asd-projects/walker/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="icon" type="image/png" href="./images/favicon.ico">
     <title>Skyler's Beautiful Box Walker</title>
     <!-- Load CSS files -->
     <link rel="stylesheet" type="text/css" href="index.css">
