--- a/asd-projects/walker/index.html
+++ b/asd-projects/walker/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="icon" type="image/png" href="./images/favicon.ico">
-    <title>Skyler's Beautiful Box Walker</title>
+    <title>Skyler's Walker Game</title>
     <!-- Load CSS files -->
     <link rel="stylesheet" type="text/css" href="index.css">
     
@@ -14,6 +13,7 @@
   <body>
     <div id='board'>
       <div id='walker'></div>
+      <div id='walker2'></div>
     </div>
   </body>
 </html>
