--- a/portfolio.html
+++ b/portfolio.html
@@ -30,6 +30,7 @@
           <li><a href="asd-projects/debugging-exercise/">Debugging Exercise: A box of blue balls infinitely bouncing around</a></li>
           <li><a href="asd-projects/snake/">Snake Game: The iconic slithery snake game brought to you by Skyler ;)</a></li>
           <li><a href="asd-projects/walker/">Walker: The ultimate 2 player non-box fighting video game experience</a></li>
+          <li><a href="asd-projects/image-filtering/">Image Filtering: The wacky luigi changing image filter</a></li>
         </ul>
     </div>
 </main>
