add portfolio.html file

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,6 +31,7 @@
           <li><a href="asd-projects/snake/">Snake Game: The iconic slithery snake game brought to you by Skyler ;)</a></li>
           <li><a href="asd-projects/walker/">Walker: The ultimate 2 player non-box fighting video game experience</a></li>
           <li><a href="asd-projects/image-filtering/">Image Filtering: The wacky luigi changing image filter</a></li>
+          <li><a href="asd-projects/sorting-exercise/">Sorting Exercise: A massive, epic staircase of assortments</a></li>
         </ul>
     </div>
 </main>
