--- a/asd-projects/pong/index.html
+++ b/asd-projects/pong/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title</title>
+    <title>Skyler's Super Pong Game</title>
     <!-- Load CSS files -->
     <link rel="stylesheet" type="text/css" href="index.css">
     
@@ -11,8 +11,13 @@
   </head>
   
   <body>
-    <div id='board'>
-      <div id='gameItem'></div>
-    </div>
+    <div id='board'></div>
+    <div id='gameItem'></div>
+    <div id="leftPaddle"></div>
+    <div id="rightPaddle"></div>
+    <div id="centerLine"></div>
+    <div id="ball"></div>
+    <div id="player1Score"></div>
+    <div id="player2Score"></div>
   </body>
 </html>
