--- a/portfolio.html
+++ b/portfolio.html
@@ -32,6 +32,7 @@
           <li><a href="asd-projects/walker/">Walker: The ultimate 2 player non-box fighting video game experience</a></li>
           <li><a href="asd-projects/image-filtering/">Image Filtering: The wacky luigi changing image filter</a></li>
           <li><a href="asd-projects/sorting-exercise/">Sorting Exercise: A massive, epic staircase of assortments</a></li>
+          <li><a href="asd-projects/pong/">Super Pong: Skyler's superior super pong game</a></li>
         </ul>
     </div>
 </main>
