--- a/asd-projects/pong/index.html
+++ b/asd-projects/pong/index.html
@@ -11,13 +11,15 @@
   </head>
   
   <body>
+    <img src="img/superponglogo.png" id="superPong">
     <div id='board'></div>
     <div id='gameItem'></div>
     <div id="leftPaddle"></div>
     <div id="rightPaddle"></div>
     <div id="centerLine"></div>
     <div id="ball"></div>
-    <div id="player1Score"></div>
-    <div id="player2Score"></div>
+    <div id="player1Score" class="score">0</div>
+    <div id="player2Score" class="score">0</div>
+    
   </body>
 </html>
